# ch.grischamedia.inventree.search

./: README.md  URLS.md  pyproject.toml
search/: __init__.py  core.py  plugin.py  urls.py  version.py  views.py
search/static/plugins/search/search/: script.js  style.css
search/templates/search/: search.html
