[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ch.grischamedia.inventree.search"
version = "0.0.2"
description = "Erweiterte Suchfunktionen für InvenTree"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "GrischaMedia.ch"}
]
keywords = ["inventree", "plugin", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/grischamedia/ch.grischamedia.inventree.search"
Repository = "https://github.com/grischamedia/ch.grischamedia.inventree.search"
Issues = "https://github.com/grischamedia/ch.grischamedia.inventree.search/issues"

[tool.setuptools]
packages = ["search"]

[tool.setuptools.package-data]
search = [
    "templates/**/*",
    "static/**/*",
]

