[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ch-grischamedia-inventree-search"
version = "1.0.0"
description = "InvenTree plugin: erweiterte Suchfunktionen"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Grischa Media"}
]
keywords = ["inventree", "inventreeplugins", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/grischamedia/ch.grischamedia.inventree.search"
Upstream = "https://github.com/inventree/InvenTree"
Documentation = "https://docs.inventree.org/en/stable/plugins/"

[project.entry-points."inventree.plugins"]
gm-search = "search.plugin:SearchPlugin"

[project.entry-points."inventree_plugins"]
gm-search = "search.plugin:SearchPlugin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["search*"]

[tool.setuptools.package-data]
search = ["templates/**/*", "static/**/*"]

